--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,6 @@ follow_imports = skip
 # since we're ignoring imports, writing .mypy_cache doesn't make any sense
 cache_dir = /dev/null
 
-
 ignore_missing_imports = True
 disallow_untyped_calls = True
 warn_return_any = True
@@ -20,30 +19,4 @@ warn_unused_ignores = True
 disallow_untyped_defs = True
 check_untyped_defs = True
 
-[flake8]
-exclude = 
-    .git,
-    __pycache__,
-    config,
-    docs,
-    news,
-    dist
-ignore = 
-    # H301: one import per line
-    H301,
-    # H306: imports not in alphabetical order
-    H306,
-per-file-ignores =
-    # Top level init file improves user experience by short cutting imports,
-    # this is not used in the package online by calling clients
-    # F401: imported but unused
-    mbed_tools_ci_scripts/__init__.py:F401
-    # Don't require docstrings in tests.
-    # We evaluate the need for them on case by case basis.
-    test_*.py:D1
-max-line-length = 160
-docstring-convention = google
-
-[tool:pytest]
-addopts = --cov mbed_tools_ci_scripts --cov-report xml:coverage/coverage.xml --cov-report=html
-junit_family = xunit2
+files = mbed_tools_ci/**/*
