fix names after package name change

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ per-file-ignores =
     # Top level init file improves user experience by short cutting imports,
     # this is not used in the package online by calling clients
     # F401: imported but unused
-    mbed_tools_ci/__init__.py:F401
+    mbed_tools_ci_scripts/__init__.py:F401
     # Don't require docstrings in tests.
     # We evaluate the need for them on case by case basis.
     test_*.py:D1
