--- a/Pipfile
+++ b/Pipfile
@@ -6,3 +6,7 @@ verify_ssl = true
 [dev-packages]
 mbed-tools-ci = {path = ".",editable = true}
 tox = ">=3.3.0"
+mbed-tools-ci-scripts = {editable = true,path = "."}
+
+[packages]
+mbed-tools-ci-scripts = {path = "."}
