--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ warn_unused_ignores = True
 disallow_untyped_defs = True
 check_untyped_defs = True
 
-files = mbed_tools_ci/**/*
+files = mbed_tools_ci_scripts
