fix another name issue

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --cov mbed_tools_ci --cov-report xml:coverage/coverage.xml --cov-report=html
+addopts = --cov mbed_tools_ci_scripts --cov-report xml:coverage/coverage.xml --cov-report=html
 junit_family = xunit2
 
 [flake8]
