--- a/azure-pipelines/build-release.yml
+++ b/azure-pipelines/build-release.yml
@@ -12,6 +12,18 @@ stages:
         strategy:
           maxParallel: 10
           matrix:
+            Linting:
+              python.version: '3.7'
+              vmImageName: ubuntu-18.04
+              uploadCoverage: false
+              tox.env: linting
+
+            Typing:
+              python.version: '3.7'
+              vmImageName: ubuntu-18.04
+              uploadCoverage: false
+              tox.env: typing
+
             Linux_Py_3_6:
               python.version: '3.6'
               vmImageName: ubuntu-18.04
@@ -59,16 +71,8 @@ stages:
           - template: steps/install-development-dependencies.yml
 
           - script: |
-              tox -e linting
-            displayName: 'Static Analysis - general (flake8)'
-
-          - script: |
-              tox -e typing
-            displayName: 'Static Analysis - type checks (mypy)'
-
-          - script: |
               tox -e $(tox.env)
-            displayName: 'Run unit tests (tox -e $(tox.env))'
+            displayName: 'Run tox -e $(tox.env)'
 
           - script: |
               curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
