pass all env vars to tox

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ docstring-convention = google
 envlist = linting,typing,py36,py37,py38
 minversion = 3.3.0
 isolated_build = true
-passenv = USERNAME
+passenv = *
 
 [testenv]
 deps =
