put the passenv directive in the correct subsection

--- a/tox.ini
+++ b/tox.ini
@@ -31,9 +31,9 @@ docstring-convention = google
 envlist = linting,typing,py36,py37,py38
 minversion = 3.3.0
 isolated_build = true
-passenv = *
 
 [testenv]
+passenv = USERNAME
 deps =
     pytest
     pytest-cov
