ci: Replace `assert-news` with `towncrier.check`
`assert-news` will be removed from `mbed-tools-ci-scripts` to reduce
maintenance overhead of custom scripts. `towncrier` now supports
checking news files.

Signed-off-by: Devaraj Ranganna <devaraj.ranganna@arm.com>

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ pytest-cov = "*"
 wheel = "*"
 mbed-tools-ci-scripts = {editable = true, path = "."}
 pre-commit = "*"
+towncrier = "*"
 
 [pipenv]
 allow_prereleases = true
