--- a/azure-pipelines/build-release.yml
+++ b/azure-pipelines/build-release.yml
@@ -116,12 +116,10 @@ stages:
             inputs:
               versionSpec: '3.7'
 
-          - template: steps/determine-current-branch.yml
-
           - template: steps/install-development-dependencies.yml
 
           - script: |
-              assert-news -b $(current_branch)
+              python -m towncrier.check
             displayName: 'Run check'
 
   - stage: DocBuild
