pyproject: Add importlib-metadata and packaging licences
The "Licence Report" script has started failing as it can't detect the
licence for the `importlib-metadata` or `packaging` packages. These
packages have Apache-2.0 licences. Add the licence to the "Packages
With Checked Licences" section of `pyproject.toml` to keep the
CI script happy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ pdoc3="Accepted for this project since not distributed"
 python-dotenv="BSD-3-Clause"
 twine="Apache-2.0"
 jellyfish="BSD-2-Clause"
+importlib-metadata="Apache-2.0"
+packaging="Apache-2.0"
 
 [AutoVersionConfig]
 CONFIG_NAME = "DEFAULT"
